feat: Add deterministic diagnostics subsystem with worklog support
Implements Plan 1 from deterministic diagnostics + worklog plan:

**Core Diagnostics System:**
- DiagnosticsStore: SQLite-backed storage with deterministic IDs
  - DiagnosticRun: audit record with UUIDv7 runId + metadata
  - DiagnosticAnalysis: deterministic analysisId based on (projectId, treeHash, tool, config, findings)
  - Finding IDs: deterministic based on (analysisId, ruleId, location, message)
- SARIF 2.1.0 parser and normalizer for tool output
- TypeScript SARIF generator (tsc-sarif) for static analysis

**REST API Endpoints:**
- POST /api/v1/diagnostics/ingest - Ingest SARIF or normalized findings
- GET /api/v1/diagnostics/latest - Query latest run by project/tool/tree
- GET /api/v1/diagnostics/findings/:analysisId - List findings for analysis
- POST /api/v1/diagnostics/diff - Compare two analyses (introduced/resolved/unchanged)
- GET /api/v1/diagnostics/summary/:analysisId - Aggregate finding counts

**MCP Tools (partial):**
- diagnostics_ingest, diagnostics_latest, diagnostics_diff exposed via MCP

**CLI Collector:**
- src/cli.ts: diagnostics collection CLI with worklog integration
- Computes treeHash via ProjectScanner
- Records DIAGNOSTICS_INGESTED events to EventStore
- Supports configHash, environmentHash, and tool identity

**Type Safety:**
- Fixed exactOptionalPropertyTypes issues across all configs
- Explicit | undefined for all optional properties
- Type-safe config merging with assertions

**Next Steps (not yet done):**
- GitHub Actions workflow (.github/workflows/diagnostics.yml)
- MCP worklog tools (worklog_record, worklog_list)
- Tests for determinism guarantees
- Fix chunk/hunk/range coordinate alignment

--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "dev": "tsc --watch",
     "start": "bun run dist/http/index.js",
     "start:sse": "PING_MEM_TRANSPORT=sse bun run dist/http/index.js",
-    "start:rest": "PING_MEM_TRANSPORT=rest bun run dist/http/index.js"
+    "start:rest": "PING_MEM_TRANSPORT=rest bun run dist/http/index.js",
+    "diagnostics:tsc-sarif": "bun run src/diagnostics/tsc-sarif.ts",
+    "diagnostics:collect": "bun run src/cli.ts collect"
   },
   "keywords": [
     "ai",
