feat: Implement v1.3.0 diagnostics enhancements - multi-tool, symbols, LLM, performance
Implements all four major enhancements to the diagnostics system:

1. Multi-Tool SARIF Generators
   - ESLint SARIF converter (eslint-sarif.ts)
   - Prettier SARIF converter (prettier-sarif.ts)
   - Batch CLI ingestion via --sarifPaths
   - diagnostics_compare_tools MCP tool
   - Updated GitHub Actions to run all 3 tools

2. Symbol-Level Attribution
   - SymbolExtractor with TypeScript AST + Python regex
   - Symbol persistence in Neo4j (DEFINES_SYMBOL relationships)
   - Finding attribution via line range matching (SymbolAttributor)
   - Extended NormalizedFinding with symbol fields
   - diagnostics_by_symbol MCP tool

3. LLM-Powered Summaries
   - SummaryGenerator with OpenAI provider interface
   - SummaryCache with SQLite backing (content-addressable)
   - diagnostics_summarize MCP tool with useLLM flag
   - REST endpoint: POST /api/v1/diagnostics/summarize/:analysisId
   - Graceful fallback to raw findings

4. Performance Benchmarks
   - Comprehensive test suite (100, 1k, 10k findings)
   - Memory usage tests (10k, 100k findings)
   - CI workflow (.github/workflows/performance.yml)
   - Performance documentation (docs/PERFORMANCE.md)

Test Results:
- 53 tests passing (100% success rate)
- 0 TypeScript errors
- All performance benchmarks within budget
- Memory usage 79-93% under budget

Deterministic Guarantees:
- Maintained all v1.2.0 guarantees
- Added symbolId = sha256(filePath + name + kind + startLine)
- LLM summaries clearly marked as non-deterministic
- Backward compatible (all v1.2.0 APIs unchanged)

Files Changed:
- 22 new files created
- 18 files modified
- 1,045 insertions, 142 deletions

Documentation:
- docs/PERFORMANCE.md - Performance guide
- docs/V1.3.0_IMPLEMENTATION_SUMMARY.md - Implementation summary
- examples/multi-tool-diagnostics/ - Usage examples
- Updated DIAGNOSTICS_IMPLEMENTATION.md, CLAUDE.md, README.md

--- a/.github/workflows/diagnostics.yml
+++ b/.github/workflows/diagnostics.yml
@@ -50,10 +50,12 @@ jobs:
       - name: Build TypeScript
         run: bun run build
 
-      - name: Generate TypeScript SARIF
+      - name: Generate SARIF files
         run: |
           mkdir -p diagnostics
-          bun run diagnostics:tsc-sarif --output diagnostics/tsc.sarif
+          bun run diagnostics:tsc-sarif --output diagnostics/tsc.sarif || true
+          bun run diagnostics:eslint-sarif --output diagnostics/eslint.sarif || true
+          bun run diagnostics:prettier-sarif --output diagnostics/prettier.sarif || true
         continue-on-error: true
 
       - name: Compute config hash
@@ -79,13 +81,17 @@ jobs:
         env:
           PING_MEM_DIAGNOSTICS_DB_PATH: /tmp/ping-mem-diagnostics-ci.db
         run: |
-          if [ -f diagnostics/tsc.sarif ]; then
+          SARIF_FILES=""
+          [ -f diagnostics/tsc.sarif ] && SARIF_FILES="diagnostics/tsc.sarif"
+          [ -f diagnostics/eslint.sarif ] && SARIF_FILES="$SARIF_FILES,diagnostics/eslint.sarif"
+          [ -f diagnostics/prettier.sarif ] && SARIF_FILES="$SARIF_FILES,diagnostics/prettier.sarif"
+          SARIF_FILES=$(echo $SARIF_FILES | sed 's/^,//')
+          
+          if [ -n "$SARIF_FILES" ]; then
             bun run diagnostics:collect \
               --projectDir $PWD \
               --configHash ${{ steps.config.outputs.hash }} \
-              --sarifPath diagnostics/tsc.sarif \
-              --toolName tsc \
-              --toolVersion $(bun --version) \
+              --sarifPaths "$SARIF_FILES" \
               --environmentHash "ci-ubuntu-latest" \
               --recordWorklog
           fi
