--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,18 +41,21 @@ services:
     # healthcheck disabled to avoid false failures
     restart: unless-stopped
 
-  # ping-mem SSE Transport Server
-  ping-mem-sse:
+  # ping-mem Unified Server (SSE + REST on single instance)
+  # Single instance avoids SQLite concurrency issues
+  ping-mem:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: ping-mem-sse
+    container_name: ping-mem
     ports:
-      - "3000:3000"
+      - "3000:3000"   # Primary port (SSE or REST based on PING_MEM_TRANSPORT)
     environment:
       - PING_MEM_HOST=0.0.0.0
       - PING_MEM_PORT=3000
       - PING_MEM_TRANSPORT=sse
+      - PING_MEM_DB_PATH=/data/ping-mem.db
+      - PING_MEM_DIAGNOSTICS_DB_PATH=/data/ping-mem-diagnostics.db
       - NEO4J_URI=bolt://ping-mem-neo4j:7687
       - NEO4J_USERNAME=neo4j
       - NEO4J_USER=neo4j
@@ -63,6 +66,7 @@ services:
       - NODE_ENV=production
     volumes:
       - ping-mem-data:/data
+      - /Users/umasankr/Projects:/projects:rw
     networks:
       - ping-mem-network
     depends_on:
@@ -78,7 +82,8 @@ services:
       start_period: 10s
     restart: unless-stopped
 
-  # ping-mem REST API Server
+  # ping-mem REST API Server (optional second instance for REST-only clients)
+  # Uses same persistent DB via volume mount
   ping-mem-rest:
     build:
       context: .
@@ -90,6 +95,8 @@ services:
       - PING_MEM_HOST=0.0.0.0
       - PING_MEM_PORT=3001
       - PING_MEM_TRANSPORT=rest
+      - PING_MEM_DB_PATH=/data/ping-mem.db
+      - PING_MEM_DIAGNOSTICS_DB_PATH=/data/ping-mem-diagnostics.db
       - NEO4J_URI=bolt://ping-mem-neo4j:7687
       - NEO4J_USERNAME=neo4j
       - NEO4J_USER=neo4j
@@ -100,6 +107,7 @@ services:
       - NODE_ENV=production
     volumes:
       - ping-mem-data:/data
+      - /Users/umasankr/Projects:/projects:rw
     networks:
       - ping-mem-network
     depends_on:
@@ -114,6 +122,8 @@ services:
       retries: 3
       start_period: 10s
     restart: unless-stopped
+    profiles:
+      - rest-api
 
 networks:
   ping-mem-network:
